# HE3DB

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
src/HEDB/comparison/: CMakeLists.txt  HomCompare.cpp  HomCompare.h  comparison.h  extract_msb.cpp  extract_msb.h  operators.cpp  operators.h  tfhepp_utils.cpp  tfhepp_utils.h
src/HEDB/conversion/: CMakeLists.txt  conversion.h  polyeval_bsgs.cpp  polyeval_bsgs.h  repack.cpp  repack.h  seal_util.cpp  seal_util.h
src/HEDB/utils/: CMakeLists.txt  ThreadPool.h  function.h  multi_thread.h  serialize.cpp  serialize.h  types.h  utils.h
test/: CMakeLists.txt  comparison_test.cpp  conversion_test.cpp  tpch_q6.cpp
